feat: 組織管理機能の追加とユーザー表示の改善
  主な変更内容:
  - 組織(Organization)管理機能を実装
    - 組織の作成、編集、削除機能
    - 組織メンバー管理（追加、編集、削除、ロール設定）
    - 組織別のプロジェクト管理
  - ヘッダーに組織セレクターを追加
    - ユーザーが所属する組織を切り替え可能
  - ユーザー表示を改善
    - ヘッダーの「Welcome,」後にユーザー名を表示
    - チケットコメントに投稿者名を表示（UserIDではなく実名）
  - API改善
    - `/api/organizations/with-roles`エンドポイントを追加
    - UserManagementServiceを追加してユーザー情報を統合管理
  - UIの改善
    - ホーム画面にダッシュボード風のデザインを追加
    - プロジェクト一覧の表示を改善
    - ローディングスピナーのデザインを改善

  技術的な変更:
  - Entity Framework Coreに組織関連のエンティティを追加
  - JWTクレームからユーザー名を適切に取得する処理を実装
  - Blazorコンポーネントの状態管理を改善

--- a/TicketManagement.ApiService/appsettings.Development.json
+++ b/TicketManagement.ApiService/appsettings.Development.json
@@ -39,5 +39,8 @@
       "Realm": "ticket-management",
       "ClientId": "ticket-management-api"
     }
+  },
+  "Frontend": {
+    "Url": "https://localhost:7133"
   }
 }
