--- a/TicketManagement.Web/appsettings.Development.json
+++ b/TicketManagement.Web/appsettings.Development.json
@@ -14,5 +14,8 @@
       "ClientId": "ticket-management-web",
       "ClientSecret": ""
     }
+  },
+  "ApiService": {
+    "BaseUrl": "https://localhost:7521"
   }
 }
