組織管理機能の修正(ユーザー作成は未完)

--- a/TicketManagement.ApiService/appsettings.json
+++ b/TicketManagement.ApiService/appsettings.json
@@ -5,7 +5,9 @@
       "Microsoft.AspNetCore": "Warning",
       "Microsoft.EntityFrameworkCore.Database.Command": "Information",
       "TicketManagement": "Debug",
-      "TicketManagement.Infrastructure.Logging": "Information"
+      "TicketManagement.Infrastructure.Logging": "Information",
+      "TicketManagement.ApiService.Controllers": "Debug",
+      "TicketManagement.Infrastructure.Services": "Debug"
     },
     "Console": {
       "IncludeScopes": true,
@@ -63,5 +65,10 @@
       "Realm": "ticket-management",
       "ClientId": "ticket-management-api"
     }
+  },
+  "Keycloak": {
+    "Realm": "ticket-management",
+    "AdminClientId": "ticket-management-service",
+    "AdminClientSecret": "ticket-management-service-secret"
   }
 }
