全体のリファクタリングを実施

--- a/TicketManagement.ApiService/appsettings.json
+++ b/TicketManagement.ApiService/appsettings.json
@@ -3,11 +3,28 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning",
-      "Microsoft.EntityFrameworkCore.Database.Command": "Information",
-      "TicketManagement": "Debug",
+      "Microsoft.EntityFrameworkCore.Database.Command": "Warning",
+      "Microsoft.EntityFrameworkCore.Query": "Warning",
+      "System.Net.Http.HttpClient": "Warning",
+      
+      // Application logging - follow best practices
+      "TicketManagement": "Information",
       "TicketManagement.Infrastructure.Logging": "Information",
-      "TicketManagement.ApiService.Controllers": "Debug",
-      "TicketManagement.Infrastructure.Services": "Debug"
+      "TicketManagement.ApiService.Controllers": "Information",
+      "TicketManagement.ApiService.Controllers.TicketsController": "Debug",
+      
+      // Service layer - business operations at Information, details at Debug
+      "TicketManagement.Infrastructure.Services.Commands": "Information",
+      "TicketManagement.Infrastructure.Services.Queries": "Debug",
+      "TicketManagement.Infrastructure.Services.Authorization": "Debug",
+      "TicketManagement.Infrastructure.Services": "Information",
+      "TicketManagement.Infrastructure.Services.TicketService": "Debug",
+      
+      // Repository layer - only errors and warnings by default
+      "TicketManagement.Infrastructure.Repositories": "Warning",
+      
+      // Cache operations - debug level for troubleshooting
+      "TicketManagement.Infrastructure.Services.CacheService": "Debug"
     },
     "Console": {
       "IncludeScopes": true,
