画面表示上のエラー修正

--- a/TicketManagement.ApiService/appsettings.Development.json
+++ b/TicketManagement.ApiService/appsettings.Development.json
@@ -35,10 +35,14 @@
   },
   "Authentication": {
     "Keycloak": {
-      "BaseUrl": "http://localhost:8080/auth",
+      "BaseUrl": "http://localhost:8080",
       "Realm": "ticket-management",
       "ClientId": "ticket-management-api"
     }
+  },
+  "Keycloak": {
+    "Authority": "http://localhost:8080",
+    "Realm": "ticket-management"
   },
   "Frontend": {
     "Url": "https://localhost:7133"
