--- a/TicketManagement.ApiService/appsettings.json
+++ b/TicketManagement.ApiService/appsettings.json
@@ -78,12 +78,13 @@
   "AllowedHosts": "*",
   "Authentication": {
     "Keycloak": {
-      "BaseUrl": "http://localhost:8080/auth",
+      "BaseUrl": "http://localhost:8080",
       "Realm": "ticket-management",
       "ClientId": "ticket-management-api"
     }
   },
   "Keycloak": {
+    "Authority": "http://localhost:8080",
     "Realm": "ticket-management",
     "AdminClientId": "ticket-management-service",
     "AdminClientSecret": "ticket-management-service-secret"
